--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -6,5 +6,6 @@ $icon-font-path: "../fonts/" !default;
 @import "../../jspm_packages/github/twbs/bootstrap-sass@3.3.7/assets/stylesheets/_bootstrap";
 
 @import 'variables';
+@import 'general';
 @import 'setup';
 @import 'race';
