possibility to filter the teams by the group number in the finished teams list + display groups next to eachother based on screen size

--- a/assets/sass/_race.scss
+++ b/assets/sass/_race.scss
@@ -1,6 +1,6 @@
 .chrono-race-app .race {
   .group {
-    //margin-bottom: 15px;
+    margin-bottom: 15px;
 
     .group-number {
       font-weight: bold;
